--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-streamlit>=1.35.0
-pandas>=2.2.2
-psycopg2-binary>=2.9.9
-altair>=5.3.0
-numpy>=1.26.4
+streamlit
+pandas
+altair
+supabase
+psycopg2-binary
+
 
